--- a/exercise_files/Ch06/06_02b/src/index.html
+++ b/exercise_files/Ch06/06_02b/src/index.html
@@ -1,8 +1,7 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="utils.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="app.ts" type="text/javascript"></script>
 </head>
 
 <body></body>
